# xnode-builders

./: README.md  flake.nix
templates/javascript/astro/: package-lock.json  package.json
templates/javascript/astro-node/: .gitignore  astro.config.mjs  flake.nix  package-lock.json  package.json
templates/javascript/nextjs/: .gitignore  flake.nix  next.config.ts  package-lock.json  package.json
templates/javascript/nextjs/app/: layout.tsx
templates/javascript/nodejs/: .gitignore  flake.nix  index.ts  package-lock.json  package.json  tsconfig.json
templates/javascript/react/: flake.nix  package-lock.json  package.json
templates/javascript/vite/: flake.nix  package.json
templates/python/poetry/: flake.nix  pyproject.toml
templates/python/poetry/src/poetry/: __init__.py
templates/python/requirements-txt/: flake.nix  pyproject.toml  requirements.txt
templates/python/requirements-txt/requirements_txt/: __init__.py
templates/python/uv/: .gitignore  flake.nix  pyproject.toml
templates/python/uv/src/uv/: __init__.py
templates/rust/dependency/: .gitignore  Cargo.toml
templates/rust/dependency/src/: main.rs
templates/rust/hello-world/: Cargo.toml
templates/rust/hello-world/example/: flake.nix
templates/rust/hello-world/src/: main.rs
templates/rust/xnode-manager/: flake.nix
