[project]
name = "poetry"
version = "1.0.0"
description = ""
authors = [{ name = "Plopmenz", email = "plopmenz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["print-color (>=0.4.6,<0.5.0)"]

[tool.poetry]
packages = [{ include = "poetry", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
poetry = "poetry:main"
