[project]
name = "uv"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Plopmenz", email = "plopmenz@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "print-color>=0.4.6",
]

[project.scripts]
uv = "uv:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
